# CGprogramming

./: .gitignore  CMakeLists.txt  main.cpp
lib/: 2  CMakeLists.txt  color.cpp  color.h  cube.cpp  davide.cpp  davide.h  fshader.glsl  global.h  pointGen.cpp  pointGen.h  pol.cpp  pol.h  run.cpp  run.h  shader.frag  shader.vert  snowflake.cpp  snowflake.h  sup.cpp  triangles.cpp  triangles.h  turtle.cpp  turtle.h  vec.h  vshader.glsl
